--- a/css/styles.css
+++ b/css/styles.css
@@ -106,6 +106,10 @@ header {
   margin-top: 0;
 }
 
+#project-1{
+  padding-bottom: 0;
+}
+
 
 /* Work Experience
 ------------------------------------*/
