--- a/css/styles.css
+++ b/css/styles.css
@@ -8,13 +8,14 @@ https://coolors.co/f7fff7-343434-2f3061-ffe66d-a1c6d7
 #A1C6D7 - blue light
 */
 
-
 /* Global styles
 ------------------------------------*/
 html {
   box-sizing: border-box;
 }
-*, *:before, *:after {
+*,
+*:before,
+*:after {
   box-sizing: inherit;
 }
 
@@ -22,7 +23,7 @@ body {
   color: #343434;
   margin: 0;
   padding: 0;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 15px;
   line-height: 1.5;
 }
@@ -30,7 +31,7 @@ img {
   width: 300px;
 }
 a {
-  color: #FFE66D;
+  color: #ffe66d;
 }
 a:hover {
   text-decoration: none;
@@ -42,8 +43,9 @@ h1 {
 h2 {
   font-size: 45px;
 }
-h1, h2 {
-  font-family: 'Caveat', cursive;
+h1,
+h2 {
+  font-family: "Caveat", cursive;
   font-weight: 400;
   margin: 0;
 }
@@ -53,44 +55,67 @@ h1, h2 {
   margin: 0 auto;
   padding: 60px 0;
 }
-h3{
+h3 {
   margin-bottom: 0;
 }
-.item-details h3 + p{
+.item-details h3 + p {
   font-style: italic;
 }
-.item-details h3 ~ p{
+.item-details h3 ~ p {
   margin: 0;
 }
-.divider > section{
+.divider > section {
   border-bottom: 1px dashed #343434;
   padding: 25px 0;
-  }
-  .divider > section:last-of-type{
-    border-bottom: none;
-  }
-
-
+}
+.divider > section:last-of-type {
+  border-bottom: none;
+}
 
 /* Profile
 ------------------------------------*/
 header {
-  background: #2F3061;
-  color: #F7FFF7;
+  background: #2f3061;
+  color: #f7fff7;
 }
 
+/* MOVING CONTENT */
+.moving-content {
+  margin-top: 50px;
+  font-size: 40px;
+  height: 50px;
+  overflow: hidden;
+}
+
+.moving-content > div > div {
+  display: inline-block;
+  padding: 10px;
+}
+
+.moving-content div:first-child {
+  animation: show 7s linear infinite;
+}
+
+@keyframes show {
+  0% {
+    margin-top: 20px;
+  }
+  100% {
+    margin-top: -620px;
+  }
+}
 
 /* Projects
 ------------------------------------*/
 .projects {
-  background: #F7FFF7;
+  background: #f7fff7;
 }
 .projects a {
-  color: #2F3061;
+  color: #2f3061;
 }
 .projects .btn {
-  color: #F7FFF7;
-  background: #2F3061;
+  color: #f7fff7;
+  background: #2f3061;
   text-decoration: none;
   padding: 8px;
   border-radius: 4px;
@@ -106,51 +131,48 @@ header {
   margin-top: 0;
 }
 
-#project-1{
+#project-1 {
   padding-bottom: 0;
 }
-
 
 /* Work Experience
 ------------------------------------*/
 .work-experience {
-  background: #A1C6D7;
+  background: #a1c6d7;
 }
-
 
 /* Education
 ------------------------------------*/
-.education{
+.education {
   background-image: url(../images/sharon-mccutcheon-unsplash.jpg);
   background-size: cover;
   background-position: top left;
   padding-bottom: 100px;
 }
-.education p{
+.education p {
   width: 70%;
 }
-
 
 /* Contact Info
 ------------------------------------*/
 footer {
   background: #343434;
-  color: #F7FFF7;
+  color: #f7fff7;
 }
-.contact-list{
+.contact-list {
   list-style-type: none;
   padding: 0;
 }
-.contact-list a{
+.contact-list a {
   padding: 15px;
   display: inline-block;
 }
 
-
 /* Responsive
 ------------------------------------*/
-@media screen and (min-width:750px){
-  header, footer{
+@media screen and (min-width: 750px) {
+  header,
+  footer {
     text-align: center;
   }
 
@@ -159,28 +181,28 @@ footer {
     margin-right: 20px;
   }
 
-  .job-item{
+  .job-item {
     display: grid;
     grid-template-columns: 1fr 2fr;
     column-gap: 20px;
   }
 
-  .contact-list{
+  .contact-list {
     display: flex;
     justify-content: center;
   }
 }
 
-@media screen and (max-width:749px){
-  h1{
+@media screen and (max-width: 749px) {
+  h1 {
     font-size: 75px;
     line-height: 0.9;
     margin-bottom: 20px;
   }
-  h2{
+  h2 {
     line-height: 1;
   }
-  .contact-list a{
+  .contact-list a {
     padding: 5px;
   }
 }
